--- a/WeLearn/m1-html-css/Labs/Lab2-format-fanatics/format_two.css
+++ b/WeLearn/m1-html-css/Labs/Lab2-format-fanatics/format_two.css
@@ -15,21 +15,59 @@
  */
 
 .container {
-  display:grid;
-  /* Style the template for the grid */
+  display: grid;
+  grid-template-columns: 20px auto auto auto auto auto 20px;
+  grid-template-rows: 20px auto auto auto auto 20px;
+
 }
 
 /* Making border black */
 #b {
   background-color: black;
+
 }
 
-#title {
-  grid-column: span 12;
-}
 
 .photo {
-  grid-column: /*insert format*/;
+
 }
 
 /* Style remaining grid elements */
+.border-left {
+  grid-column: 1/2;
+  grid-row: 1/5;
+
+}
+
+.border-top {
+  grid-column: 2/span 5;
+  grid-row: 1/2;
+
+}
+
+.border-right {
+  grid-column: 7;
+  grid-row: 1/span 5;
+}
+
+.border-bottom {
+  grid-column: 2/span 5;
+  grid-row: 4/5;
+}
+
+.photo-left {
+
+}
+
+.photo-right {
+
+}
+
+.photo-mid {
+
+}
+
+#title {
+  grid-column: 2/span 5;
+  grid-row: 2/3;
+}
