--- a/WeLearn/m1-html-css/Labs/Lab2-format-fanatics/format_two.css
+++ b/WeLearn/m1-html-css/Labs/Lab2-format-fanatics/format_two.css
@@ -16,8 +16,8 @@
 
 .container {
   display: grid;
-  grid-template-columns: 20px auto auto auto auto auto 20px;
-  grid-template-rows: 20px auto auto auto auto 20px;
+  grid-template-columns: 100px auto auto auto auto auto auto 100px;
+  grid-template-rows: 100px auto auto 300px auto 100px;
 
 }
 
@@ -26,48 +26,56 @@
   background-color: black;
 
 }
-
-
-.photo {
-
-}
-
 /* Style remaining grid elements */
 .border-left {
   grid-column: 1/2;
-  grid-row: 1/5;
+  grid-row: 1/span 6;
 
 }
 
 .border-top {
-  grid-column: 2/span 5;
+  grid-column: 2/span 6;
   grid-row: 1/2;
 
 }
 
 .border-right {
-  grid-column: 7;
-  grid-row: 1/span 5;
+  grid-column: 8;
+  grid-row: 1/span 6;
 }
 
 .border-bottom {
-  grid-column: 2/span 5;
-  grid-row: 4/5;
+  grid-column: 2/span 6;
+  gridd-row: auto
+
 }
 
 .photo-left {
-
+  grid-column: 2/ span 2;
+  grid-row: 3/ span 2;
 }
 
 .photo-right {
-
+  grid-column: 4/ span 2;
+  grid-row: 3/ span 2;
 }
 
 .photo-mid {
-
+  grid-column: 6/ span 2;
+  grid-row: 3/ span 2;
 }
 
 #title {
-  grid-column: 2/span 5;
+  grid-column: 2/span 6;
   grid-row: 2/3;
+}
+
+#caption {
+  grid-column: 2/ span 5;
+  grid-row: 5/6;
+}
+
+#date {
+  grid-column: 7/8;
+  grid-row: 5/6;
 }
