--- a/WeLearn/M2-javaScript/work in here/format_two0.css
+++ b/WeLearn/M2-javaScript/work in here/format_two0.css
@@ -16,8 +16,8 @@
 
 .container {
   display: grid;
-  grid-template-columns: 50px auto auto auto auto auto auto 50px;
-  grid-template-rows: 50px auto auto 300px auto 50px;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(7, 1fr);
 
 }
 
@@ -26,56 +26,37 @@
   background-color: black;
 
 }
+
 /* Style remaining grid elements */
 .border-left {
-  grid-column: 1/2;
-  grid-row: 1/span 6;
-
+  grid-row: span 7;
 }
 
 .border-top {
-  grid-column: 2/span 6;
-  grid-row: 1/2;
-
+  grid-column: span 9;
 }
 
 .border-right {
-  grid-column: 8;
-  grid-row: 1/span 6;
+  grid-row: span 7;
 }
 
 .border-bottom {
-  grid-column: 2/span 6;
-  gridd-row: auto
-
-}
-
-.photo-left {
-  grid-column: 2/ span 2;
-  grid-row: 3/ span 2;
-}
-
-.photo-right {
-  grid-column: 4/ span 2;
-  grid-row: 3/ span 2;
-}
-
-.photo-mid {
-  grid-column: 6/ span 2;
-  grid-row: 3/ span 2;
+  grid-column: span 9;
 }
 
 #title {
-  grid-column: 2/span 6;
-  grid-row: 2/3;
+  grid-column: span 9;
 }
 
-#caption {
-  grid-column: 2/ span 5;
-  grid-row: 5/6;
+.photo {
+  grid-column: span 3;
+  grid-row: span 3;
+}
+
+.caption {
+  grid-column: span 7;
 }
 
 #date {
-  grid-column: 7/8;
-  grid-row: 5/6;
+  grid-column: span 2;
 }
